--- a/.gitignore
+++ b/.gitignore
@@ -103,6 +103,9 @@ dist
 # TernJS port file
 .tern-port
 
+
+
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -118,3 +121,5 @@ build
 .env.development.local
 .env.test.local
 .env.production.local
+
+.idea
