--- a/api-node/package.json
+++ b/api-node/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
+    "jwks-rsa": "^1.9.0",
     "mysql2": "^2.1.0"
   },
   "devDependencies": {
